@@ -1,3 +1,4 @@
+* Allow PYSON Expression as key for PYSON In with dict object
 * Support Binary field in CSV import/export
 
 Version 6.0.0 - 2021-05-03
